# armaraos

./: .env.example  .gitattributes  .gitignore  AINL_GRAPH_MEMORY_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  MIGRATION.md  NOTICE  PRIOR_ART.md  README.md  REDDIT_CAMPAIGN_README.md  REDDIT_MARKETING_STRATEGY.md  REDDIT_QUICKSTART_GUIDE.md  ROADMAP_FEATURES.md  SECURITY.md  docker-compose.yml  reddit_posts_ready_to_use.md
crates/ainl-agent-snapshot/: Cargo.toml  README.md
crates/ainl-agent-snapshot/src/: builder.rs  lib.rs
crates/ainl-compression/: Cargo.toml  README.md
crates/ainl-compression/src/: adaptive.rs  cache.rs  lib.rs  profiles.rs
crates/ainl-context-compiler/: Cargo.toml  README.md
crates/ainl-context-compiler/src/: budget.rs  capability.rs  embedder.rs  failure_recall.rs  lib.rs  mcp_ainl_prompt.rs  metrics.rs  orchestrator.rs  relevance.rs  segment.rs  summarizer.rs  trajectory_recap.rs
crates/ainl-context-freshness/: Cargo.toml  README.md
crates/ainl-context-freshness/src/: lib.rs
crates/ainl-contracts/: Cargo.toml  README.md
crates/ainl-contracts/src/: learner.rs  lib.rs  procedure.rs  vitals.rs
crates/ainl-contracts/tests/fixtures/: contract_v1.json
crates/ainl-failure-learning/: Cargo.toml  README.md
crates/ainl-failure-learning/src/: gate.rs  ingest.rs  lib.rs  procedure_patch.rs  search.rs  suggest.rs
crates/ainl-graph-extractor/: Cargo.toml  LICENSE-MIT  README.md
crates/ainl-graph-extractor/src/: extractor.rs  lib.rs  persona_signals.rs  recurrence.rs  runner.rs  turn_extract.rs
crates/ainl-graph-extractor/tests/: test_extraction_report.rs  test_graph_extractor.rs
crates/ainl-impact-policy/: Cargo.toml  README.md
crates/ainl-impact-policy/src/: lib.rs
crates/ainl-improvement-proposals/: Cargo.toml  README.md
crates/ainl-improvement-proposals/src/: ledger.rs  lib.rs
crates/ainl-memory/: CHANGELOG.md  Cargo.toml  README.md
crates/ainl-memory/src/: anchored_summary.rs  lib.rs  node.rs  pattern_promotion.rs  query.rs  snapshot.rs  store.rs  trajectory_persist.rs  trajectory_table.rs
crates/ainl-memory/tests/: graph_integration.rs  test_edge_migration.rs  test_integrity.rs  test_query.rs  test_runtime_state.rs  test_snapshot.rs  test_validate.rs
crates/ainl-persona/: Cargo.toml  README.md
crates/ainl-persona/src/: axes.rs  engine.rs  extractor.rs  fitness.rs  lib.rs  persona_node.rs  signals.rs
crates/ainl-persona/tests/: test_evolution_engine.rs
crates/ainl-procedure-learning/: Cargo.toml  README.md
crates/ainl-procedure-learning/src/: lib.rs
crates/ainl-repo-intel/: Cargo.toml  README.md
crates/ainl-repo-intel/src/: lib.rs
crates/ainl-runtime/: Cargo.toml  README.md
crates/ainl-runtime/src/: adapters.rs  engine.rs  graph_cell.rs  hooks.rs  lib.rs  runtime.rs  runtime_async.rs
crates/ainl-runtime/src/adapters/: graph_patch.rs  mod.rs
crates/ainl-runtime/tests/: test_async_runtime.rs  test_delegation_depth.rs  test_engine.rs  test_graph_patch_adapter.rs  test_semantic_ranking.rs  test_session_persistence.rs  test_turn_outcome.rs  test_turn_phase_granularity.rs
crates/ainl-semantic-tagger/: Cargo.toml  README.md
crates/ainl-semantic-tagger/src/: correction.rs  lib.rs  preference.rs  tag.rs  tone.rs  tool.rs  topic.rs
crates/ainl-semantic-tagger/tests/: test_tagger.rs  test_tool_topic_regression.rs
crates/ainl-trajectory/: Cargo.toml  README.md
crates/ainl-trajectory/src/: lib.rs  replay.rs
crates/armara-provider-api/: Cargo.toml
crates/armara-provider-api/src/: lib.rs
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: channel_bridge.rs  daemon_resources.rs  graph_memory.rs  lib.rs  middleware.rs  network_hints.rs  openai_compat.rs  premium_ainl.rs  rate_limiter.rs  routes.rs  secrets_api.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/openfang-api/static/: index_body.html  index_head.html  manifest.json  premium-ainl-verify.html
crates/openfang-api/static/css/: components.css  layout.css  theme.css
crates/openfang-api/static/js/: analytics.js  api.js  app.js  daemon_lifecycle.js  fleet-vitals-mixin.js  page-load-error.js
crates/openfang-api/tests/: api_boundary_contracts_test.rs  api_integration_test.rs  daemon_lifecycle_test.rs  dashboard_frontend_contracts_test.rs  load_test.rs  planner_native_infer_e2e.rs  sse_stream_auth.rs  usage_summary_dashboard_contract_test.rs
crates/openfang-desktop/: Cargo.toml  Info.plist  tauri.conf.json
crates/openfang-desktop/capabilities/: default.json
crates/openfang-desktop/icons/: icon.icns
crates/openfang-desktop/permissions/: ainl.toml  dashboard.toml
crates/openfang-desktop/scripts/: regen_icons_from_logo.py
crates/openfang-desktop/src/: ainl.rs  ainl_upstream.rs  ainl_version.rs  app_menu.rs  commands.rs  lib.rs  macos_app_icon.rs  notification_icon.rs  os_notify.rs  product_analytics.rs  server.rs  shortcuts.rs  tray.rs  ui_prefs.rs  updater.rs
crates/openfang-runtime/: Cargo.toml  README.md
crates/openfang-runtime/src/: a2a.rs  agent_loop.rs  agent_tool_round.rs  ainl_bridge_telemetry.rs  ainl_bundle_cron.rs  ainl_graph_extractor_bridge.rs  ainl_inbox_reader.rs  ainl_policy.rs  ainl_runtime_bridge.rs  ainl_semantic_tagger_bridge.rs  assistant_output_compress.rs  audit.rs  browser.rs  cli_version_probe.rs  compactor.rs  compose_telemetry.rs  compression_project_ema.rs  context_budget.rs  context_compiler_summarizer.rs  context_overflow.rs  document_tools.rs  eco_counterfactual.rs  eco_mode_resolver.rs  eco_telemetry.rs  embedding.rs  github_subtree.rs  graph_extractor.rs  graph_memory_context.rs  graph_memory_learning.rs  graph_memory_writer.rs  hermes_a2a.rs  host_ainl_snapshot.rs  improvement_proposals_host.rs  improvement_proposals_validators.rs  kernel_handle.rs  lib.rs  llm_driver.rs  local_voice_bootstrap.rs  loop_guard.rs  mcp.rs  (+34 more)
crates/openfang-runtime/tests/: adaptive_eco_eval_harness.rs  armaraos_graph_export_json_path.rs  test_graph_extractor.rs  test_persona_evolution.rs
xtask/: Cargo.toml
xtask/src/: load_test.rs  main.rs
(+359 files in other folders)
