[workspace]
resolver = "2"
members = [
    "crates/openfang-types",
    "crates/openfang-memory",
    "crates/openfang-runtime",
    "crates/openfang-wire",
    "crates/openfang-api",
    "crates/openfang-kernel",
    "crates/openfang-cli",
    "crates/openfang-channels",
    "crates/openfang-migrate",
    "crates/openfang-skills",
    "crates/openfang-desktop",
    "crates/openfang-hands",
    "crates/openfang-extensions",
    "crates/ainl-memory",
    "crates/ainl-compression",
    "crates/ainl-persona",
    "crates/ainl-graph-extractor",
    "crates/ainl-semantic-tagger",
    "crates/ainl-runtime",
    "crates/ainl-agent-snapshot",
    "crates/ainl-contracts",
    "crates/ainl-repo-intel",
    "crates/ainl-context-freshness",
    "crates/ainl-context-compiler",
    "crates/ainl-impact-policy",
    "crates/ainl-trajectory",
    "crates/ainl-failure-learning",
    "crates/ainl-improvement-proposals",
    "crates/armara-provider-api",
    "xtask",
]

[workspace.package]
version = "0.7.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sbhooley/armaraos"
homepage = "https://github.com/sbhooley/armaraos"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
rmp-serde = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
dashmap = "6"
crossbeam = "0.8"
scopeguard = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# IDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# HTTP client (for LLM drivers)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "gzip", "deflate", "brotli"] }

# Async trait
async-trait = "0.1"

# Base64
base64 = "0.22"

# Glob matching (dashboard home editor allowlist)
globset = "0.4"

# Bytes
bytes = "1"

# Futures
futures = "0.3"
prost = "0.13"

# WebSocket client (for Discord/Slack gateway)
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = "2"

# WASM sandbox
# Pinned at 41.x: 42/43 require IntoFunc/Caller signature rewrites in sandbox.rs.
# RUSTSEC-2026-0085..0096 are Winch/Cranelift sandbox-escape paths that don't apply
# to ArmaraOS — we only run author-controlled AINL programs (no untrusted WASM,
# no Winch backend, no aarch64 host today). Bump tracked in launch-roadmap.md.
wasmtime = "41"

# HTTP server (for API daemon)
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "compression-br"] }

# Home directory resolution
dirs = "6"

# YAML parsing
serde_yaml = "0.9"

# JSON5 parsing
json5 = "0.4"

# Directory walking
walkdir = "2"

# Archives (support bundles, portable python, etc)
tar = "0.4"
flate2 = "1"

# Security
sha2 = "0.10"
sha1 = "0.10"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
hex = "0.4"
subtle = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Rate limiting
governor = "0.10"

# Interactive CLI
ratatui = "0.29"
colored = "3"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"

# HTML entity decoding
html-escape = "0.2"

# Lightweight regex
regex-lite = "0.1"

# MCP SDK (official Rust implementation)
rmcp = { version = "1.2", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }

# Socket options (SO_REUSEADDR)
socket2 = "0.5"

# Network interface enumeration (VPN / tunnel hints for dashboard)
if-addrs = "0.13"

# Zip archive extraction
zip = { version = "4", default-features = false, features = ["deflate"] }

# Email (SMTP + IMAP)
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
imap = "2"
native-tls = { version = "0.2", features = ["vendored"] }
mailparse = "0.16"

# MQTT client
rumqttc = "0.24"

# OpenSSL (vendored = statically compiled, no runtime libssl dependency on Linux)
openssl = { version = "0.10", features = ["vendored"] }

# Testing
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"

# Host + process stats for the dashboard (CPU / RSS)
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 8
opt-level = 2
strip = false

# Use the workspace crate for the crates.io dependency name (same version).
[patch.crates-io]
ainl-graph-extractor = { path = "crates/ainl-graph-extractor" }
ainl-memory = { path = "crates/ainl-memory" }
ainl-persona = { path = "crates/ainl-persona" }
ainl-semantic-tagger = { path = "crates/ainl-semantic-tagger" }
ainl-runtime = { path = "crates/ainl-runtime" }
ainl-agent-snapshot = { path = "crates/ainl-agent-snapshot" }
