[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Build automation for the ArmaraOS workspace"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
flate2 = "1"
tar = "0.4"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
