[package]
name = "ainl-agent-snapshot"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AgentSnapshot and DeterministicPlan types for AINL planner protocol"
readme = "README.md"
keywords = ["ai", "agent", "ainl", "graph", "planner"]
categories = ["development-tools"]

[dependencies]
ainl-memory = { path = "../ainl-memory", version = "0.1.10-alpha" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
