[package]
name = "ainl-agent-snapshot"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ainl-agent-snapshot"
rust-version.workspace = true
description = "AgentSnapshot and DeterministicPlan types for AINL planner protocol"
readme = "README.md"
keywords = ["ai", "agent", "ainl", "graph", "planner"]
categories = ["development-tools"]

[dependencies]
ainl-contracts = { path = "../ainl-contracts", version = "0.1.2" }
ainl-memory = { path = "../ainl-memory", version = "0.1.11-alpha" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
