[package]
name = "ainl-context-freshness"
description = "Context freshness evaluation for conservative agent policy"
version = "0.1.1"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ainl-context-freshness"
rust-version.workspace = true

[dependencies]
ainl-contracts = { path = "../ainl-contracts", version = "0.1.2" }
