[package]
name = "ainl-graph-extractor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Periodic graph extraction: semantic recurrence_count + persona evolution"

[dependencies]
ainl-memory = { path = "../ainl-memory", version = "0.1.3-alpha" }
ainl-persona = { path = "../ainl-persona", version = "0.1.0" }
chrono = { workspace = true }
regex-lite = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[test]]
name = "test_graph_extractor"
path = "tests/test_graph_extractor.rs"
