[package]
name = "ainl-graph-extractor"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Periodic graph extraction: semantic recurrence_count + persona evolution"

[dependencies]
ainl-memory = { path = "../ainl-memory", version = "0.1.8-alpha" }
ainl-persona = { path = "../ainl-persona", version = "0.1.3" }
ainl-semantic-tagger = { path = "../ainl-semantic-tagger", version = "0.1.2-alpha" }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[test]]
name = "test_graph_extractor"
path = "tests/test_graph_extractor.rs"
