[package]
name = "ainl-impact-policy"
description = "Impact-first recommended tool sequences for AINL authoring"
version = "0.1.1"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ainl-impact-policy"
rust-version.workspace = true

[dependencies]
ainl-contracts = { path = "../ainl-contracts", version = "0.1.2" }
