[package]
name = "ainl-repo-intel"
description = "Classify MCP tool inventories into repo-intelligence capability profiles"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ainl-contracts = { path = "../ainl-contracts" }
serde = { workspace = true }
