[package]
name = "ainl-runtime"
version = "0.1.2-alpha"
edition = "2021"
authors = ["Steven Hooley"]
description = "AINL (AI Native Language) runtime - graph-based agent programming"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbhooley/armaraos"
keywords = ["ai", "agent", "ainl", "programming-language"]
categories = ["development-tools", "compilers"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
ainl-memory = { path = "../ainl-memory", version = "0.1.3-alpha" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
