[package]
name = "ainl-runtime"
version = "0.2.0-alpha"
edition.workspace = true
rust-version.workspace = true
authors = ["Steven Hooley"]
description = "AINL unified-graph orchestration: load/validate memory artifacts, compile turn context, minimal graph walk, extraction scheduling, and host TurnHooks."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbhooley/armaraos"
readme = "README.md"
keywords = ["ai", "agent", "ainl", "programming-language", "graph-memory"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
scopeguard = "1"
chrono = { workspace = true }
ainl-memory = { path = "../ainl-memory", version = "0.1.5-alpha" }
ainl-persona = { path = "../ainl-persona", version = "0.1.0" }
ainl-graph-extractor = { path = "../ainl-graph-extractor", version = "0.1.2" }
ainl-semantic-tagger = { path = "../ainl-semantic-tagger", version = "0.1.0-alpha" }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
