[package]
name = "ainl-runtime"
version = "0.3.7-alpha"
edition.workspace = true
rust-version.workspace = true
authors = ["Steven Hooley"]
description = "AINL unified-graph orchestration: load/validate memory artifacts, compile turn context, minimal graph walk, extraction scheduling, host TurnHooks, and optional Tokio run_turn_async (feature async; spawn_blocking + Arc<std::sync::Mutex<GraphMemory>>)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbhooley/armaraos"
readme = "README.md"
keywords = ["ai", "agent", "ainl", "programming-language", "graph-memory"]
categories = ["development-tools"]
autotests = false

[[test]]
name = "test_delegation_depth"
path = "tests/test_delegation_depth.rs"

[[test]]
name = "test_engine"
path = "tests/test_engine.rs"

[[test]]
name = "test_graph_patch_adapter"
path = "tests/test_graph_patch_adapter.rs"

[[test]]
name = "test_semantic_ranking"
path = "tests/test_semantic_ranking.rs"

[[test]]
name = "test_session_persistence"
path = "tests/test_session_persistence.rs"

[[test]]
name = "test_turn_outcome"
path = "tests/test_turn_outcome.rs"

[[test]]
name = "test_turn_phase_granularity"
path = "tests/test_turn_phase_granularity.rs"

[[test]]
name = "test_async_runtime"
path = "tests/test_async_runtime.rs"
required-features = ["async"]

[features]
default = []
# Enables run_turn_async + TurnHooksAsync. Graph uses Arc<std::sync::Mutex<GraphMemory>> so
# AinlRuntime::new / sqlite_store work on any thread; SQLite-heavy work uses spawn_blocking.
async = ["dep:async-trait", "dep:tokio"]

[dependencies]
ainl-agent-snapshot = { path = "../ainl-agent-snapshot", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
scopeguard = { workspace = true }
chrono = { workspace = true }
ainl-memory = { path = "../ainl-memory", version = "0.1.9-alpha" }
ainl-persona = { path = "../ainl-persona", version = "0.1.6" }
ainl-graph-extractor = { path = "../ainl-graph-extractor", version = "0.1.6" }
ainl-semantic-tagger = { path = "../ainl-semantic-tagger", version = "0.1.6" }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = [
    "rt",
    "macros",
    "fs",
    "sync",
] }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
