[package]
name = "openfang-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native desktop application for ArmaraOS (Tauri 2.0)"

[lints.rust]
# objc 0.2 `msg_send!` expands to cfg values (e.g. `cargo-clippy`) that fail `check-cfg` under -D warnings.
unexpected_cfgs = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
openfang-kernel = { path = "../openfang-kernel" }
openfang-api = { path = "../openfang-api" }
openfang-types = { path = "../openfang-types" }
openfang-runtime = { path = "../openfang-runtime" }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
toml = { workspace = true }
open = "5"
dirs = "5"
urlencoding = "2"
flate2 = "1"
tar = "0.4"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
semver = "1"
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
notify-rust = "4.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
# Tauri uses custom-protocol in production builds
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "openfang-desktop"
path = "src/main.rs"
